# basic-rust-application

./: Cargo.toml  LICENSE  devenv.nix
src/: main.rs
