[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
init-tracing-opentelemetry = { version = "0.16.0", features = ["tracing_subscriber_ext"] }
tokio = { version = "1.35.1", features = ["macros", "full"] }
