[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot = "0.10.0"
init-tracing-opentelemetry = { version = "0.17.0", features = ["tracing_subscriber_ext"] }
opentelemetry = "0.21.0"
schemars = "0.8.16"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "full"] }
tracing = "0.1.40"
